[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/screens/LibraryScreen.gd" type="Script" id=1]
[ext_resource path="res://scripts/ui/FileTree.gd" type="Script" id=2]
[ext_resource path="res://scripts/ui/FadeElement.gd" type="Script" id=3]
[ext_resource path="res://scripts/ui/MediumElement.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui/SmallElement.gd" type="Script" id=5]

[node name="LibraryScreen" type="CenterContainer"]
visible = false
margin_right = 1920.0
margin_bottom = 952.0
rect_min_size = Vector2( 0, 952 )
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = 60.0
margin_top = 376.0
margin_right = 1860.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="FileTree" type="Tree" parent="HBox"]
margin_right = 1000.0
margin_bottom = 200.0
rect_min_size = Vector2( 1000, 200 )
size_flags_vertical = 5
hide_root = true
script = ExtResource( 2 )

[node name="FileInfo" type="PanelContainer" parent="HBox"]
margin_left = 1000.0
margin_right = 1800.0
margin_bottom = 200.0
rect_min_size = Vector2( 800, 0 )

[node name="VBox" type="VBoxContainer" parent="HBox/FileInfo"]
margin_right = 800.0
margin_bottom = 200.0

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox"]
margin_right = 800.0

[node name="HBoxTitle" type="HBoxContainer" parent="HBox/FileInfo/VBox"]
editor/display_folded = true
margin_top = 45.0
margin_right = 800.0
margin_bottom = 94.0
alignment = 1

[node name="LABEL_FILE_NAME_INPUT" type="Label" parent="HBox/FileInfo/VBox/HBoxTitle"]
margin_left = 400.0
margin_right = 400.0
margin_bottom = 49.0
align = 1

[node name="HSeparator" type="HSeparator" parent="HBox/FileInfo/VBox"]
margin_top = 139.0
margin_right = 800.0
margin_bottom = 143.0

[node name="ReplayInfo" type="VBoxContainer" parent="HBox/FileInfo/VBox"]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
script = ExtResource( 3 )

[node name="HBoxDate" type="HBoxContainer" parent="HBox/FileInfo/VBox/ReplayInfo"]
editor/display_folded = true
margin_top = 30.0
margin_right = 786.0
margin_bottom = 44.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxDate"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_REPLAY_DATE" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxDate"]
margin_right = 130.0
margin_bottom = 14.0
text = "LABEL_REPLAY_DATE"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_DATE_INPUT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxDate"]
margin_left = 145.0
margin_right = 145.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="HBoxPlace" type="HBoxContainer" parent="HBox/FileInfo/VBox/ReplayInfo"]
editor/display_folded = true
margin_top = 48.0
margin_right = 786.0
margin_bottom = 62.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxPlace"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_REPLAY_PLACE" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxPlace"]
margin_right = 136.0
margin_bottom = 14.0
text = "LABEL_REPLAY_PLACE"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_PLACE_INPUT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxPlace"]
margin_left = 151.0
margin_right = 151.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="HBoxTimeControl" type="HBoxContainer" parent="HBox/FileInfo/VBox/ReplayInfo"]
editor/display_folded = true
margin_top = 66.0
margin_right = 786.0
margin_bottom = 80.0
custom_constants/separation = 15
script = ExtResource( 5 )

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxTimeControl"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_REPLAY_TIMECONTROL" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxTimeControl"]
margin_right = 190.0
margin_bottom = 14.0
text = "LABEL_REPLAY_TIMECONTROL"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_TIMECONTROL_MINUTES" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxTimeControl"]
margin_left = 205.0
margin_right = 205.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="LABEL_MINUTES" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxTimeControl"]
margin_right = 40.0
margin_bottom = 14.0
text = "LABEL_MINUTES2"
script = ExtResource( 4 )

[node name="LABEL_DIV" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxTimeControl"]
margin_right = 40.0
margin_bottom = 14.0
text = "/"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_TIMECONTROL_BYOYOMI" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxTimeControl"]
margin_left = 220.0
margin_right = 220.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="LABEL_SECONDS" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxTimeControl"]
margin_right = 40.0
margin_bottom = 14.0
text = "LABEL_SECONDS2"
script = ExtResource( 4 )

[node name="HBoxHandicap" type="HBoxContainer" parent="HBox/FileInfo/VBox/ReplayInfo"]
editor/display_folded = true
margin_top = 84.0
margin_right = 786.0
margin_bottom = 98.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxHandicap"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_REPLAY_HANDICAP" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxHandicap"]
margin_right = 166.0
margin_bottom = 14.0
text = "LABEL_REPLAY_HANDICAP"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_HANDICAP_INPUT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxHandicap"]
margin_left = 181.0
margin_right = 181.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="HBoxSenteName" type="HBoxContainer" parent="HBox/FileInfo/VBox/ReplayInfo"]
editor/display_folded = true
margin_top = 102.0
margin_right = 786.0
margin_bottom = 116.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxSenteName"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_REPLAY_SENTE_NAME" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxSenteName"]
margin_right = 179.0
margin_bottom = 14.0
text = "LABEL_REPLAY_SENTE_NAME"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_SENTE_NAME_INPUT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxSenteName"]
margin_left = 194.0
margin_right = 194.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="HBoxGoteName" type="HBoxContainer" parent="HBox/FileInfo/VBox/ReplayInfo"]
editor/display_folded = true
margin_top = 120.0
margin_right = 786.0
margin_bottom = 134.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxGoteName"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_REPLAY_GOTE_NAME" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxGoteName"]
margin_right = 176.0
margin_bottom = 14.0
text = "LABEL_REPLAY_GOTE_NAME"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_GOTE_NAME_INPUT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxGoteName"]
margin_left = 191.0
margin_right = 191.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="HBoxMoveCounter" type="HBoxContainer" parent="HBox/FileInfo/VBox/ReplayInfo"]
editor/display_folded = true
margin_top = 138.0
margin_right = 786.0
margin_bottom = 152.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxMoveCounter"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_REPLAY_MOVECOUNT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxMoveCounter"]
margin_right = 181.0
margin_bottom = 14.0
text = "LABEL_REPLAY_MOVECOUNT"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_MOVECOUNT_INPUT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxMoveCounter"]
margin_left = 196.0
margin_right = 196.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="HBoxResult" type="HBoxContainer" parent="HBox/FileInfo/VBox/ReplayInfo"]
editor/display_folded = true
margin_top = 156.0
margin_right = 786.0
margin_bottom = 170.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxResult"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_REPLAY_RESULT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxResult"]
margin_right = 143.0
margin_bottom = 14.0
text = "LABEL_REPLAY_RESULT"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_RESULT_INPUT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxResult"]
margin_left = 158.0
margin_right = 158.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="HBoxWinner" type="HBoxContainer" parent="HBox/FileInfo/VBox/ReplayInfo"]
editor/display_folded = true
margin_top = 174.0
margin_right = 786.0
margin_bottom = 188.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxWinner"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_REPLAY_WINNER" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxWinner"]
margin_right = 150.0
margin_bottom = 14.0
text = "LABEL_REPLAY_WINNER"
script = ExtResource( 4 )

[node name="LABEL_REPLAY_WINNER_INPUT" type="Label" parent="HBox/FileInfo/VBox/ReplayInfo/HBoxWinner"]
margin_left = 165.0
margin_right = 165.0
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="DirInfo" type="VBoxContainer" parent="HBox/FileInfo/VBox"]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="LABEL_DIR_TYPE_INPUT" type="Label" parent="HBox/FileInfo/VBox/DirInfo"]
margin_left = 145.0
margin_top = 30.0
margin_right = 145.0
margin_bottom = 44.0
align = 1

[node name="HSeparator" type="HSeparator" parent="HBox/FileInfo/VBox/DirInfo"]
margin_right = 40.0
margin_bottom = 4.0

[node name="HBoxFileCount" type="HBoxContainer" parent="HBox/FileInfo/VBox/DirInfo"]
editor/display_folded = true
margin_top = 30.0
margin_right = 786.0
margin_bottom = 44.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/DirInfo/HBoxFileCount"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_DIR_FILECOUNT" type="Label" parent="HBox/FileInfo/VBox/DirInfo/HBoxFileCount"]
margin_left = 145.0
margin_right = 145.0
margin_bottom = 14.0
text = "LABEL_DIR_FILECOUNT"

[node name="LABEL_DIR_FILECOUNT_INPUT" type="Label" parent="HBox/FileInfo/VBox/DirInfo/HBoxFileCount"]
margin_left = 145.0
margin_right = 145.0
margin_bottom = 14.0

[node name="HBoxSubDirCount" type="HBoxContainer" parent="HBox/FileInfo/VBox/DirInfo"]
margin_top = 30.0
margin_right = 786.0
margin_bottom = 44.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/DirInfo/HBoxSubDirCount"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_DIR_SUBDIR_COUNT" type="Label" parent="HBox/FileInfo/VBox/DirInfo/HBoxSubDirCount"]
margin_left = 145.0
margin_right = 145.0
margin_bottom = 14.0
text = "LABEL_DIR_SUBDIR_COUNT"

[node name="LABEL_DIR_SUBDIR_COUNT_INPUT" type="Label" parent="HBox/FileInfo/VBox/DirInfo/HBoxSubDirCount"]
margin_left = 145.0
margin_right = 145.0
margin_bottom = 14.0

[node name="HBoxAllFileCount" type="HBoxContainer" parent="HBox/FileInfo/VBox/DirInfo"]
editor/display_folded = true
margin_top = 30.0
margin_right = 786.0
margin_bottom = 44.0
custom_constants/separation = 15

[node name="ReferenceRect" type="ReferenceRect" parent="HBox/FileInfo/VBox/DirInfo/HBoxAllFileCount"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )

[node name="LABEL_DIR_FILECOUNT2" type="Label" parent="HBox/FileInfo/VBox/DirInfo/HBoxAllFileCount"]
margin_left = 145.0
margin_right = 145.0
margin_bottom = 14.0
text = "LABEL_DIR_FILECOUNT2"

[node name="LABEL_DIR_FILECOUNT_INPUT2" type="Label" parent="HBox/FileInfo/VBox/DirInfo/HBoxAllFileCount"]
margin_left = 145.0
margin_right = 145.0
margin_bottom = 14.0

[node name="ReplayState" type="Label" parent="HBox/FileInfo/VBox"]
visible = false
margin_right = 157.0
margin_bottom = 49.0
text = "DESC_REPLAY_DAMAGED"
align = 1
valign = 1
script = ExtResource( 5 )

